<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PythonProgram"
    android:background="#3f48cc">

    <TextView
        android:id="@+id/PythonProgramsHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="550dp"
        android:fontFamily="@font/oleo_script_swash_caps"
        android:text="@string/python_programs"
        android:textAlignment="center"
        android:textColor="#FFF200"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button13"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="200dp"
        android:backgroundTint="#fff200"
        android:fontFamily="sans-serif-black"
        android:text="@string/arrays"
        android:textColor="#3f48cc"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button14"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginStart="180dp"
        android:layout_marginBottom="200dp"
        android:backgroundTint="#fff200"
        android:fontFamily="sans-serif-black"
        android:text="@string/strings"
        android:textColor="#3f48cc"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button15"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginEnd="180dp"
        android:backgroundTint="#fff200"
        android:fontFamily="sans-serif-black"
        android:text="@string/stacks"
        android:textColor="#3f48cc"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button16"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginStart="180dp"
        android:backgroundTint="#fff200"
        android:fontFamily="sans-serif-black"
        android:text="@string/infix_to_postfix"
        android:textColor="#3f48cc"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button17"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="180dp"
        android:backgroundTint="#fff200"
        android:fontFamily="sans-serif-black"
        android:text="@string/tower_of_hanoi"
        android:textColor="#3f48cc"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button18"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="200dp"
        android:backgroundTint="#fff200"
        android:fontFamily="sans-serif-black"
        android:text="@string/circular_queue"
        android:textColor="#3f48cc"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>